2006-08-14 [paul]	2.4.0cvs46

	* src/prefs_account.c
		use GTK_STOCK_EDIT

2006-08-13 [colin]	2.4.0cvs45

	* src/common/utils.c
		Fix "a" in quote when the original message is empty,
		by using \0 instead of 'a' to test writability of
		temp files.

2006-08-13 [wwp]	2.4.0cvs44

	* src/plugins/spamassassin/spamassassin.c
		fix capitalization of "SpamAssassin" in some debug, log and
		dialog messages.

2006-08-13 [paul]	2.4.0cvs43

	* src/editldap.c
		fix overlapping widgets
	* src/prefs_account.c
		fix translation of protocol_names[]
		fix label disappearing off the edge of the
		visible area

2006-08-12 [paul]	2.4.0cvs42

	* manual/plugins.xml
		update IRC channel info before it gets forgotten
		about

2006-08-11 [colin]	2.4.0cvs41

	* src/compose.c
	* src/mainwindow.c
	* src/mainwindow.h
	* src/procmsg.c
	* src/procmsg.h
	* src/summaryview.c
	* src/toolbar.c
		Grey out the Send button if
		- Queue folders are empty, or
		- We're sending already

2006-08-11 [wwp]	2.4.0cvs40

	* src/main.c
		fix a logic issue when quitting while a compose window is
		still open, thanks to Colin.

2006-08-10 [colin]	2.4.0cvs39

	* src/main.c
		Fix default font size setting after wizard run
	* src/imap.c
	* src/etpan/imap-thread.c
	* src/etpan/imap-thread.h
		Fix bug #999 (Timing out on TSL cert validation 
		dialog makes ugly things happen). Also, STARTTLS
		unconditionnaly if initial capabilities contain
		LOGINDISABLED and STARTTLS.

2006-08-09 [colin]	2.4.0cvs38

	* src/mainwindow.c
	* src/mainwindow.h
		Fix Tools/Actions sensitivity when there are
		no actions

2006-08-09 [colin]	2.4.0cvs37

	* src/prefs_filtering.c
		Warning fix, patch by Paul
	* src/messageview.c
	* src/prefs_actions.c
	* src/prefs_filtering_action.c
	* src/prefs_matcher.c
		Uniformisation of "Info ..." to "Info..." (for
		old gtk), patch by Fabien
	* src/plugins/clamav/clamav_plugin_gtk.c
		Sensitivity fix by Fabien

2006-08-09 [colin]	2.4.0cvs36

	* src/main.c
	* src/main.h