@@ -1738,3 +1738,4 @@
 ( cvs diff -u -r 1.18.2.35 -r 1.18.2.36 src/plugins/spamassassin/spamassassin.c;  ) > 2.4.0cvs44.patchset
 ( cvs diff -u -r 1.36.2.73 -r 1.36.2.74 src/common/utils.c;  ) > 2.4.0cvs45.patchset
 ( cvs diff -u -r 1.105.2.64 -r 1.105.2.65 src/prefs_account.c;  ) > 2.4.0cvs46.patchset
+( cvs diff -u -r 1.16.2.19 -r 1.16.2.20 src/prefs_display_header.c;  ) > 2.4.0cvs47.patchset
