@@ -1,3 +1,8 @@
+2006-08-14 [paul]	2.4.0cvs47
+
+	* src/prefs_display_header.c
+		re-enable user-defined Displayed Headers
+
 2006-08-14 [paul]	2.4.0cvs46
 
 	* src/prefs_account.c
